# shasum

./: CMakeLists.txt  README.md
source/: main.cpp
